# af_xtp_gateway

./: CMakeLists.txt  README.md  export.cc
include/: config.h  formatter.h  market_adapter.h  trader_adapter.h  xtp_serialize.h
include/af/: common.h  concurrentqueue.h  data_type.h  event.h  log.h  toml.hpp
include/af/core/: market_base.h  trader_base.h
include/af/strategy/: context.h  runner.h  strategy.h
include/af/utils/: common.h
include/api/: xtp_api_struct.h
src/: market_adapter.cc  trader_adapter.cc
